tests/invalid/security/hard_credentials.php
<?php

db_connect('super-secret-password');
call_api('token', 'my-api-key');

